# sesg-cli

./: .env.example  .gitignore  README.md  out.dot  pyproject.toml
src/sesg_cli/: config.py  multi_client_scopus_search.py  similar_words_finder_cache.py  similar_words_generator_cache.py  strategies.py  telegram_report.py  topic_extraction_strategies.py
src/sesg_cli/cli/: __init__.py  citation_graph.py  config.py  db.py  experiment.py  experiment_llm.py  fix_invalid_strings.py  pdf_to_txt.py  results.py  scopus.py  slr.py
src/sesg_cli/database/: __init__.py  connection.py
src/sesg_cli/database/models/: __init__.py  association_tables.py  base.py  bertopic_params.py  experiment.py  formulation_params.py  lda_params.py  params.py  search_string.py  search_string_performance.py  similar_words_cache.py  similar_words_cache_words.py  slr.py  study.py
src/sesg_cli/database/util/: results_queries.py
src/sesg_cli/strategies_implementations/: llm_similar_words_generator.py
