[project]
name = "sesg-cli"
version = "0.0.1"
description = "CLI to interact with SeSG"
requires-python = "==3.10.10"
dependencies = [
  "sesg==0.0.54",
  "SQLAlchemy==2.0.15",
  "psycopg[binary,pool]==3.1.9",
  "tomli==2.0.1",
  "tomli-w==1.0.0",
  "dacite==1.8.1",
  "python-dotenv==1.0.0",
  "typer[all]==0.9.0",
  "torch==2.0.0",
  "transformers==4.30.2",
  "rich==13.3.5",
  "trio==0.22.0",
]

[project.scripts]
sesg = "sesg_cli.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = [
  "I001",
  "C"
]
unfixable = ["F841"]
exclude = [".venv"]
ignore-init-module-imports = true
fix = true

[tool.ruff.isort]
lines-after-imports = 2