[project]
name = "sesg-cli"
version = "0.0.1"
description = "CLI to interact with SeSG"
requires-python = "==3.10.10"
dependencies = [
  "sesg==0.0.59",
  "SQLAlchemy==2.0.15",
  "psycopg[binary,pool]==3.1.9",
  "tomli==2.0.1",
  "tomli-w==1.0.0",
  "dacite==1.8.1",
  "python-dotenv==1.0.0",
  "typer[all]==0.9.0",
  "torch==2.0.0",
  "transformers==4.30.2",
  "rich==13.3.5",
  "pypdf2==3.0.1",
  "xlsxwriter==3.1.2",
  "pyTelegramBotAPI==4.12.0",
  "networkx==3.1",
]

[project.scripts]
sesg = "sesg_cli.cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = ["I001", "C"]
unfixable = ["F841"]
exclude = [".venv"]
ignore-init-module-imports = true
fix = true

[tool.ruff.isort]
lines-after-imports = 2
